# serializer version: 1
# name: test_deep_traceback
  '''
  ============================= test session starts ==============================
  collected 1 item
  
  test_deep_traceback.py F                                                 [100%]
  
  =================================== FAILURES ===================================
  _____________________________ test_deep_traceback ______________________________
  
  x = 0
  
      @settings(database=None, derandomize=True)
      @given(st.integers())
      def test_deep_traceback(x):
  >       helper(x)
  
  test_deep_traceback.py: # helper(x) 
  _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 
  
  x = 0
  
      def helper(x):
  >       raise ValueError("boom")
  E       ValueError: boom
  E       Falsifying example: test_deep_traceback(
  E           x=0,  # or any other generated value
  E       )
  
  test_deep_traceback.py: # raise ValueError("boom") ValueError
  ============================== 1 failed in T ===============================
  '''
# ---
# name: test_healthcheck_traceback
  '''
  ============================= test session starts ==============================
  collected 1 item
  
  test_healthcheck_traceback.py F                                          [100%]
  
  =================================== FAILURES ===================================
  _____________________ test_healthcheck_traceback_is_hidden _____________________
  
  E   hypothesis.errors.FailedHealthCheck: Input generation is slow: Hypothesis only generated N valid inputs after T seconds.
      
            count | fraction |    slowest draws (seconds)
    x | <timing data>
      
      This could be for a few reasons:
      1. This strategy could be generating too much data per input. Try decreasing the amount of data generated, for example by decreasing the minimum size of collection strategies like st.lists().
      2. Some other expensive computation could be running during input generation. For example, if @st.composite or st.data() is interspersed with an expensive computation, HealthCheck.too_slow is likely to trigger. If this computation is unrelated to input generation, move it elsewhere. Otherwise, try making it more efficient, or disable this health check if that is not possible.
      
      If you expect input generation to take this long, you can disable this health check with @settings(suppress_health_check=[HealthCheck.too_slow]). See https://hypothesis.readthedocs.io/en/latest/reference/api.html#hypothesis.HealthCheck for details.
  All traceback entries are hidden. Pass `--full-trace` to see hidden and internal frames.
  ---------------------------------- Hypothesis ----------------------------------
  You can reproduce this failure by adding @seed(0) to this test, or by running pytest with --hypothesis-seed=0.
  ============================== 1 failed in T ===============================
  '''
# ---
# name: test_issue_basic_traceback
  '''
  ============================= test session starts ==============================
  collected 1 item
  
  test_issue_basic_traceback.py F                                          [100%]
  
  =================================== FAILURES ===================================
  _____________________________ test_basic_traceback _____________________________
  
  _ = None
  
      @settings(database=None, derandomize=True)
      @given(st.none())
      def test_basic_traceback(_):
  >       1/0
  E       ZeroDivisionError: division by zero
  E       Falsifying example: test_basic_traceback(
  E           _=None,
  E       )
  
  test_issue_basic_traceback.py: # 1/0 ZeroDivisionError
  ============================== 1 failed in T ===============================
  '''
# ---
# name: test_issue_lambda_traceback
  '''
  ============================= test session starts ==============================
  collected 1 item
  
  test_issue_lambda_traceback.py F                                         [100%]
  
  =================================== FAILURES ===================================
  ____________________________ test_lambda_traceback _____________________________
  
  _ = None
  
      @settings(database=None, derandomize=True)
      @given(st.none())
      def test_lambda_traceback(_):
          f = lambda: """Hi!"""
  >       1/0
  E       ZeroDivisionError: division by zero
  E       Falsifying example: test_lambda_traceback(
  E           _=None,
  E       )
  
  test_issue_lambda_traceback.py: # 1/0 ZeroDivisionError
  ============================== 1 failed in T ===============================
  '''
# ---
# name: test_issue_wrong_function_traceback
  '''
  ============================= test session starts ==============================
  collected 1 item
  
  test_issue_wrong_function_traceback.py F                                 [100%]
  
  =================================== FAILURES ===================================
  _____________________________ test_wrong_function ______________________________
  
  arguments = (), kwargs = {}
  
      @impersonate(test)
      def wrapped_test(*arguments, **kwargs):  # pragma: no cover  # coverage limitation
  >       raise exc(message)
  E       hypothesis.errors.InvalidArgument: Too many positional arguments for test_wrong_function() were passed to @given - expected at most 0 arguments, but got 1 (none(),)
  
  .../hypothesis/core.py:NN: InvalidArgument
  ============================== 1 failed in T ===============================
  '''
# ---
# name: test_map_failure_traceback
  '''
  ============================= test session starts ==============================
  collected 1 item
  
  test_map_failure_traceback.py F                                          [100%]
  
  =================================== FAILURES ===================================
  _______________________________ test_map_failure _______________________________
  
  x = 0
  
  >   @given(st.integers().map(lambda x: 1/0))
                                         ^^^
  E   ZeroDivisionError: division by zero
  E   while generating 'x' from integers().map(lambda x: 1 / 0)
  
  test_map_failure_traceback.py: # @given(st.integers().map(lambda x: 1/0)) ZeroDivisionError
  ============================== 1 failed in T ===============================
  '''
# ---
# name: test_pr1582_multiple_failures
  '''
  ============================= test session starts ==============================
  collected 1 item
  
  test_pr1582_multiple_failures.py 
  INTERNALERROR> Traceback (most recent call last):
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/_pytest/main.py", line NN, in wrap_session
  INTERNALERROR>     session.exitstatus = doit(config, session) or 0
  INTERNALERROR>                          ~~~~^^^^^^^^^^^^^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/_pytest/main.py", line NN, in _main
  INTERNALERROR>     config.hook.pytest_runtestloop(session=session)
  INTERNALERROR>     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/pluggy/_hooks.py", line NN, in __call__
  INTERNALERROR>     return self._hookexec(self.name, self._hookimpls.copy(), kwargs, firstresult)
  INTERNALERROR>            ~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/pluggy/_manager.py", line NN, in _hookexec
  INTERNALERROR>     return self._inner_hookexec(hook_name, methods, kwargs, firstresult)
  INTERNALERROR>            ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/pluggy/_callers.py", line NN, in _multicall
  INTERNALERROR>     raise exception
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/pluggy/_callers.py", line NN, in _multicall
  INTERNALERROR>     teardown.throw(exception)
  INTERNALERROR>     ~~~~~~~~~~~~~~^^^^^^^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/_pytest/logging.py", line NN, in pytest_runtestloop
  INTERNALERROR>     return (yield)  # Run all the tests.
  INTERNALERROR>             ^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/pluggy/_callers.py", line NN, in _multicall
  INTERNALERROR>     teardown.throw(exception)
  INTERNALERROR>     ~~~~~~~~~~~~~~^^^^^^^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/_pytest/terminal.py", line NN, in pytest_runtestloop
  INTERNALERROR>     result = yield
  INTERNALERROR>              ^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/pluggy/_callers.py", line NN, in _multicall
  INTERNALERROR>     res = hook_impl.function(*args)
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/_pytest/main.py", line NN, in pytest_runtestloop
  INTERNALERROR>     item.config.hook.pytest_runtest_protocol(item=item, nextitem=nextitem)
  INTERNALERROR>     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/pluggy/_hooks.py", line NN, in __call__
  INTERNALERROR>     return self._hookexec(self.name, self._hookimpls.copy(), kwargs, firstresult)
  INTERNALERROR>            ~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/pluggy/_manager.py", line NN, in _hookexec
  INTERNALERROR>     return self._inner_hookexec(hook_name, methods, kwargs, firstresult)
  INTERNALERROR>            ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/pluggy/_callers.py", line NN, in _multicall
  INTERNALERROR>     raise exception
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/pluggy/_callers.py", line NN, in _multicall
  INTERNALERROR>     teardown.throw(exception)
  INTERNALERROR>     ~~~~~~~~~~~~~~^^^^^^^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/_pytest/warnings.py", line NN, in pytest_runtest_protocol
  INTERNALERROR>     return (yield)
  INTERNALERROR>             ^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/pluggy/_callers.py", line NN, in _multicall
  INTERNALERROR>     teardown.throw(exception)
  INTERNALERROR>     ~~~~~~~~~~~~~~^^^^^^^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/_pytest/assertion/__init__.py", line NN, in pytest_runtest_protocol
  INTERNALERROR>     return (yield)
  INTERNALERROR>             ^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/pluggy/_callers.py", line NN, in _multicall
  INTERNALERROR>     teardown.throw(exception)
  INTERNALERROR>     ~~~~~~~~~~~~~~^^^^^^^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/_pytest/unittest.py", line NN, in pytest_runtest_protocol
  INTERNALERROR>     return (yield)
  INTERNALERROR>             ^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/pluggy/_callers.py", line NN, in _multicall
  INTERNALERROR>     teardown.throw(exception)
  INTERNALERROR>     ~~~~~~~~~~~~~~^^^^^^^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/_pytest/faulthandler.py", line NN, in pytest_runtest_protocol
  INTERNALERROR>     return (yield)
  INTERNALERROR>             ^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/pluggy/_callers.py", line NN, in _multicall
  INTERNALERROR>     res = hook_impl.function(*args)
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/_pytest/runner.py", line NN, in pytest_runtest_protocol
  INTERNALERROR>     runtestprotocol(item, nextitem=nextitem)
  INTERNALERROR>     ~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/_pytest/runner.py", line NN, in runtestprotocol
  INTERNALERROR>     reports.append(call_and_report(item, "call", log))
  INTERNALERROR>                    ~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/_pytest/runner.py", line NN, in call_and_report
  INTERNALERROR>     report: TestReport = ihook.pytest_runtest_makereport(item=item, call=call)
  INTERNALERROR>                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/pluggy/_hooks.py", line NN, in __call__
  INTERNALERROR>     return self._hookexec(self.name, self._hookimpls.copy(), kwargs, firstresult)
  INTERNALERROR>            ~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/pluggy/_manager.py", line NN, in _hookexec
  INTERNALERROR>     return self._inner_hookexec(hook_name, methods, kwargs, firstresult)
  INTERNALERROR>            ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/pluggy/_callers.py", line NN, in _multicall
  INTERNALERROR>     raise exception
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/pluggy/_callers.py", line NN, in _multicall
  INTERNALERROR>     teardown.throw(exception)
  INTERNALERROR>     ~~~~~~~~~~~~~~^^^^^^^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/_pytest/tmpdir.py", line NN, in pytest_runtest_makereport
  INTERNALERROR>     rep = yield
  INTERNALERROR>           ^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/pluggy/_callers.py", line NN, in _multicall
  INTERNALERROR>     teardown.throw(exception)
  INTERNALERROR>     ~~~~~~~~~~~~~~^^^^^^^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/pluggy/_callers.py", line NN, in run_old_style_hookwrapper
  INTERNALERROR>     teardown.send(result)
  INTERNALERROR>     ~~~~~~~~~~~~~^^^^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/src/_hypothesis_pytestplugin.py", line NN, in pytest_runtest_makereport
  INTERNALERROR>     report = (yield).get_result()
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/pluggy/_result.py", line NN, in get_result
  INTERNALERROR>     raise exc.with_traceback(tb)
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/pluggy/_callers.py", line NN, in run_old_style_hookwrapper
  INTERNALERROR>     res = yield
  INTERNALERROR>           ^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/pluggy/_callers.py", line NN, in _multicall
  INTERNALERROR>     teardown.throw(exception)
  INTERNALERROR>     ~~~~~~~~~~~~~~^^^^^^^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/_pytest/skipping.py", line NN, in pytest_runtest_makereport
  INTERNALERROR>     rep = yield
  INTERNALERROR>           ^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/pluggy/_callers.py", line NN, in _multicall
  INTERNALERROR>     res = hook_impl.function(*args)
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/_pytest/runner.py", line NN, in pytest_runtest_makereport
  INTERNALERROR>     return TestReport.from_item_and_call(item, call)
  INTERNALERROR>            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/_pytest/reports.py", line NN, in from_item_and_call
  INTERNALERROR>     longrepr = _format_failed_longrepr(item, call, excinfo)
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/_pytest/reports.py", line NN, in _format_failed_longrepr
  INTERNALERROR>     longrepr = item.repr_failure(excinfo)
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/_pytest/python.py", line NN, in repr_failure
  INTERNALERROR>     return self._repr_failure_py(excinfo, style=style)
  INTERNALERROR>            ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/_pytest/nodes.py", line NN, in _repr_failure_py
  INTERNALERROR>     return excinfo.getrepr(
  INTERNALERROR>            ~~~~~~~~~~~~~~~^
  INTERNALERROR>         funcargs=True,
  INTERNALERROR>         ^^^^^^^^^^^^^^
  INTERNALERROR>     ...<5 lines>...
  INTERNALERROR>         truncate_args=truncate_args,
  INTERNALERROR>         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  INTERNALERROR>     )
  INTERNALERROR>     ^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/_pytest/_code/code.py", line NN, in getrepr
  INTERNALERROR>     return fmt.repr_excinfo(self)
  INTERNALERROR>            ~~~~~~~~~~~~~~~~^^^^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/_pytest/_code/code.py", line NN, in repr_excinfo
  INTERNALERROR>     traceback[0]._rawentry,
  INTERNALERROR>     ~~~~~~~~~^^^
  INTERNALERROR>   File "/Users/drmaciver/Projects/hypothesis/hypothesis-python/.venv/lib/python3.14/site-packages/_pytest/_code/code.py", line NN, in __getitem__
  INTERNALERROR>     return super().__getitem__(key)
  INTERNALERROR>            ~~~~~~~~~~~~~~~~~~~^^^^^
  INTERNALERROR> IndexError: list index out of range
  
  ============================== 1 warning in T ==============================
  '''
# ---
# name: test_pr1582_simple
  '''
  ============================= test session starts ==============================
  collected 1 item
  
  test_pr1582_simple.py F                                                  [100%]
  
  =================================== FAILURES ===================================
  _________________________________ test_simple __________________________________
  
  x = 0
  
      @settings(database=None, derandomize=True)
      @given(st.integers())
      def test_simple(x):
  >       assert x
  E       assert 0
  E       Falsifying example: test_simple(
  E           x=0,
  E       )
  
  test_pr1582_simple.py: # assert x AssertionError
  ============================== 1 failed in T ===============================
  '''
# ---
# name: test_simple_passing
  '''
  ============================= test session starts ==============================
  collected 1 item
  
  test_simple_passing.py .                                                 [100%]
  
  ============================== 1 passed in T ===============================
  '''
# ---
